# llama.cpp

./: CMakeLists.txt  Makefile  README.md
scripts/: chat.sh  convert-13.sh  convert-30.sh  convert-65.sh  convert-7.sh  quantize-13.sh  quantize-30.sh  quantize-65.sh  quantize-7.sh  source-base.sh  usage.md
src/: CMakeLists.txt  main.cpp
src/chat/: CMakeLists.txt  chat.cpp
src/ggml/: CMakeLists.txt  ggml.c
src/llama/: CMakeLists.txt  llama.cpp  llama.h
src/llama/test/: test-tokenizer-0.cpp
src/quantize/: CMakeLists.txt  quantize.cpp
src/quantize/test/: test-quantize.c
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt
